--- a/src/css/_page.css
+++ b/src/css/_page.css
@@ -24,8 +24,8 @@
 
 .page__title {
   margin-top: 0;
+  letter-spacing: 0.03em;
 }
-
 
 .page__container {
   position: relative;
@@ -50,9 +50,8 @@
 .page__subtitle {
   margin: 0;
   padding: 1em 0;
+  letter-spacing: 0.02em;
 }
-
-
 
 @media screen and (min-width: 768px) {
   .page {
@@ -103,7 +102,7 @@
 }
 
 @media screen and (min-width: 768px) and (min-resolution: 1.5dppx) {
-    .page {
-      background-image: url(../img/bg@2x.jpg);
+  .page {
+    background-image: url(../img/bg@2x.jpg);
   }
 }
