--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,11 @@
-@import '_preloader.css';
-@import '_font.css';
-@import '_global.css';
-@import '_animation.css';
-@import '_btn.css';
-@import '_overlay.css';
-@import '_dropup.css';
-@import '_logo.css';
-@import '_page.css';
-@import '_sounds.css';
-@import '_info-block.css';
-@import '_clear-tbl.css';
-@import '_noscreen.css';
+@import "_preloader.css";
+@import "_font.css";
+@import "_global.css";
+@import "_animation.css";
+@import "_btn.css";
+@import "_logo.css";
+@import "_page.css";
+@import "_sounds.css";
+@import "_info-block.css";
+@import "_clear-tbl.css";
+@import "_noscreen.css";
